--- a/index.html
+++ b/index.html
@@ -378,75 +378,68 @@
       nextPractice();
     }
 
-   function playTempoPracticeVideo(videoFile, nextVideoFile, callback) {
-  const container = document.getElementById("visual-container");
+    function playTempoPracticeVideo(videoFile, correctAnswer, onComplete) {
+      setTimeout(() => {
+        updateScreen(`
+          <div style="position: relative; width: 100%; height: 100%; background: #cce0dd;">
+            <img src="/mnt/data/c28e9ada-d439-4a0b-9bd0-341d10674b71.png" style="width: 100%; height: 100%; object-fit: contain;">
+            <video id="tempoPracticeVideo" style="position: absolute; top: 0; width: 100%; height: 100%; object-fit: contain;" playsinline>
+              <source src="${videoFile}" type="video/mp4">
+            </video>
+          </div>
+        `, "#cce0dd");
 
-  // Clear the container
-  container.innerHTML = "";
+        const video = document.getElementById("tempoPracticeVideo");
+        video.play();
 
-  // Create and configure video element
-  const video = document.createElement("video");
-  video.src = videoFile;
-  video.autoplay = true;
-  video.controls = false;
-  video.muted = true; // Allow autoplay in browsers
-  video.playsInline = true;
-  video.style.width = "100%";
-  video.style.height = "100%";
-  video.style.objectFit = "cover";
-  
-  // Append to container
-  container.appendChild(video);
+        video.onended = () => {
+          setTimeout(() => {
+            showTempoResponseScreen(correctAnswer, onComplete);
+          }, 1000);
+        };
+      }, 1500);
+    }
 
-  // When the video ends, show response buttons
-  video.onended = () => {
-    showResponseButtons(container, nextVideoFile, callback);
-  };
-}
+    function showTempoResponseScreen(correctAnswer, callback) {
+      updateScreen(`
+        <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%; background: #cce0dd; padding: 20px;">
+          <img src="/mnt/data/c28e9ada-d439-4a0b-9bd0-341d10674b71.png" style="width: 80%; max-width: 800px;">
+          <h1 style="color: #4b2e83; margin-top: 30px;">How did the music sound?</h1>
+          <div style="display: flex; gap: 40px; margin-top: 20px;">
+            <button class="tempo-btn" data-choice="fast" style="padding: 14px 28px; font-size: 1.2em; border-radius: 10px;">Fast</button>
+            <button class="tempo-btn" data-choice="slow" style="padding: 14px 28px; font-size: 1.2em; border-radius: 10px;">Slow</button>
+            <button class="tempo-btn" data-choice="same" style="padding: 14px 28px; font-size: 1.2em; border-radius: 10px;">Same</button>
+          </div>
+          <audio id="correctSound" src="correct_feedback.mp3"></audio>
+          <audio id="wrongSound" src="wrong_feedback.mp3"></audio>
+          <div id="feedback" style="margin-top: 20px; font-size: 1.2em; color: red;"></div>
+        </div>
+      `, "#cce0dd");
 
-function showResponseButtons(container, nextVideoFile, callback) {
-  container.innerHTML = `
-    <div style="text-align: center; margin-top: 20px;">
-      <button id="slowBtn">Too Slow</button>
-      <button id="fastBtn">Too Fast</button>
-    </div>
-  `;
+      const buttons = document.querySelectorAll('.tempo-btn');
+      buttons.forEach(btn => {
+        btn.addEventListener('click', () => {
+          const choice = btn.getAttribute('data-choice');
+          if (choice === correctAnswer) {
+            document.getElementById("feedback").style.color = "green";
+            document.getElementById("feedback").innerHTML = "Correct!";
+            document.getElementById("correctSound").play().then(() => {
+              setTimeout(callback, 1500);
+            });
+          } else {
+            document.getElementById("feedback").style.color = "red";
+            document.getElementById("feedback").innerHTML = "Oops! Try again.";
+            document.getElementById("wrongSound").play();
+          }
+        });
+      });
+    }
 
-  document.getElementById("slowBtn").onclick = () => {
-    playFollowUpVideo("PT_SLOW2.mp4", callback);
-  };
-
-  document.getElementById("fastBtn").onclick = () => {
-    playFollowUpVideo("PT_FAST2.mp4", callback);
-  };
-}
-
-function playFollowUpVideo(followUpVideoFile, callback) {
-  const container = document.getElementById("visual-container");
-
-  // Clear and insert new video
-  container.innerHTML = "";
-
-  const video = document.createElement("video");
-  video.src = followUpVideoFile;
-  video.autoplay = true;
-  video.controls = false;
-  video.muted = true;
-  video.playsInline = true;
-  video.style.width = "100%";
-  video.style.height = "100%";
-  video.style.objectFit = "cover";
-
-  container.appendChild(video);
-
-  video.onended = () => {
-    if (callback) callback();
-  };
-}
     function showRealTrialsIntro() {
       setTimeout(() => {
         updateScreen(`
           <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100%; background: #cce0dd;">
+            <img src="/mnt/data/c28e9ada-d439-4a0b-9bd0-341d10674b71.png" style="width: 80%; max-width: 800px;">
             <h1 style="margin-top: 30px; color: #4b2e83;">Awesome! Now you're ready for the real trials!</h1>
             <button id="startRealTrials" class="btn-primary" style="margin-top: 20px; font-size: 1.2em;">Start</button>
           </div>
