--- a/index.html
+++ b/index.html
@@ -39,15 +39,18 @@
     }
 
     /* Still‑images & videos used in the REAL trials */
-    .media-content {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-      display: none;
-      position: absolute;
-      top: 0;
-      left: 0;
-    }
+.media-content {
+  /* ensure the entire video is always visible, centered and letter‑boxed if needed */
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 
     /* Overlay that sits on TOP of everything (click‑to‑start, etc.) */
     #overlay {
@@ -289,14 +292,32 @@
 
     function playFastVideo() {
       updateScreen(`
-        <video id="fastVideo" width="100%" height="100%" playsinline style="background:black;">
-          <source src="PT_FAST1.mp4" type="video/mp4" />
-        </video>
-      `, "black");
-      const video = document.getElementById("fastVideo");
-      video.play();
-      video.onended = showSlowIntro;
-    }
+  <div style="display:flex; 
+              align-items:center; 
+              justify-content:center; 
+              height:100%; 
+              background:#cce0dd;">
+    <video id="practiceVideo" playsinline preload="auto"
+           style="max-width:100%; max-height:100%; object-fit:contain;">
+      <source src="${trial.video}" type="video/mp4" />
+      Your browser doesn’t support video.
+    </video>
+  </div>
+`);
+const video = document.getElementById("practiceVideo");
+video.play();
+video.onended = () => {
+  if (trial.responseRequired) {
+    showPracticeChoice(trial.correct, nextPractice);
+  } else {
+    trialControls.innerHTML = `
+      <div style="font-size:1.3em; margin-top:20px;">
+        That was the <strong>${trial.correct}</strong> elevator!<br><br>
+        Let’s try one yourself next.
+      </div>`;
+    setTimeout(nextPractice, 4000);
+  }
+};
 
     function showSlowIntro() {
       updateScreen(`
@@ -696,41 +717,51 @@
       playNextPractice();
     }
 
-    function showPracticeChoice(correctAnswer, onComplete) {
-      document.getElementById("trialControls").innerHTML = `
-        <h2>Which elevator did Melody ride?</h2>
-        <div style="display: flex; justify-content: center; gap: 60px; margin-top: 20px;">
-          <div>
-            <img src="normal.jpg" class="elevator-option" id="normalElevatorPractice" alt="Normal Elevator" style="width:300px;">
-            <div style="text-align: center; margin-top: 10px;">Normal</div>
-          </div>
-          <div>
-            <img src="wonky.png" class="elevator-option" id="wonkyElevatorPractice" alt="Wonky Elevator" style="width:300px;">
-            <div style="text-align: center; margin-top: 10px;">Wonky</div>
-          </div>
-        </div>
-        <div id="practiceFeedback" style="margin-top: 30px; font-size: 1.2em;"></div>
-      `;
+ function showPracticeChoice(correctAnswer, onComplete) {
+  document.getElementById("trialControls").innerHTML = `
+    <h2>Which elevator did Melody ride?</h2>
+    <div style="display:flex; justify-content:center; gap:60px; margin-top:20px;">
+      <div>
+        <img src="normal.jpg" id="normalElevatorPractice"
+             class="elevator-option" alt="Normal" style="width:300px;">
+        <div style="text-align:center; margin-top:10px;">Normal</div>
+      </div>
+      <div>
+        <img src="wonky.png" id="wonkyElevatorPractice"
+             class="elevator-option" alt="Wonky" style="width:300px;">
+        <div style="text-align:center; margin-top:10px;">Wonky</div>
+      </div>
+    </div>
+    <div id="practiceFeedback" style="margin-top:30px; font-size:1.2em;"></div>
+  `;
 
-      document.getElementById("normalElevatorPractice").addEventListener("click", () => {
-        showPracticeFeedback("normal" === correctAnswer, onComplete);
-      }, { once: true });
+  function handleClick(choice) {
+    const isCorrect = choice === correctAnswer;
+    showPracticeFeedback(isCorrect, onComplete, correctAnswer);
+  }
 
-      document.getElementById("wonkyElevatorPractice").addEventListener("click", () => {
-        showPracticeFeedback("wonky" === correctAnswer, onComplete);
-      }, { once: true });
-    }
+  document.getElementById("normalElevatorPractice")
+    .addEventListener("click", () => handleClick("normal"), { once: true });
+  document.getElementById("wonkyElevatorPractice")
+    .addEventListener("click", () => handleClick("wonky"),  { once: true });
+}
 
-    function showPracticeFeedback(isCorrect, onComplete) {
-      const fb = document.getElementById("practiceFeedback");
-      fb.innerHTML = isCorrect
-        ? "<span style='color: green;'>Correct!</span> Great job!"
-        : "<span style='color: red;'>Oops!</span> That was actually the <strong>" + (isCorrect ? "normal" : "wonky") + "</strong> elevator.";
-      setTimeout(() => {
-        document.getElementById("trialControls").innerHTML = "";
-        onComplete();
-      }, 3000);
-    }
+function showPracticeFeedback(isCorrect, onComplete, correctAnswer) {
+  const fb = document.getElementById("practiceFeedback");
+  if (isCorrect) {
+    fb.innerHTML = "<span style='color:green;'>Correct!</span> Great job!";
+  } else {
+    fb.innerHTML = `
+      <span style='color:red;'>Oops!</span> 
+      That was actually the <strong>${correctAnswer}</strong> elevator.
+    `;
+  }
+  // always advance after 3s
+  setTimeout(() => {
+    document.getElementById("trialControls").innerHTML = "";
+    onComplete();
+  }, 3000);
+}
 
     /* --------------------------------------------------
        INITIALISE HIDDEN TRIAL ASSETS
