--- a/index.html
+++ b/index.html
@@ -394,60 +394,90 @@ function playFastVideo() {
       nextPractice();
     }
 
-    function playTempoPracticeVideo(videoFile, correctAnswer, onComplete) {
-      setTimeout(() => {
-        updateScreen(`
-          <div style="position: relative; width: 100%; height: 100%; background: #cce0dd;">
-            <video id="tempoPracticeVideo" style="position: absolute; top: 0; width: 100%; height: 100%; object-fit: contain;" playsinline>
-              <source src="${videoFile}" type="video/mp4">
-            </video>
-          </div>
-        `, "#cce0dd");
+function playTempoPracticeVideo(videoFile, correctAnswer, callback) {
+  const container = document.getElementById("visual-container");
+  container.innerHTML = "";
 
-        const video = document.getElementById("tempoPracticeVideo");
-        video.play();
+  // wrapper to center & contain
+  const wrapper = document.createElement("div");
+  wrapper.style.cssText = `
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%; height: 100%;
+    background: #cce0dd;
+  `;
 
-        video.onended = () => {
-          setTimeout(() => {
-            showTempoResponseScreen(correctAnswer, onComplete);
-          }, 1000);
-        };
-      }, 1500);
-    }
+  const video = document.createElement("video");
+  video.src = videoFile;
+  video.autoplay = true;
+  video.playsInline = true;
+  video.muted = true; 
+  video.style.cssText = `
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+  `;
 
-    function showTempoResponseScreen(correctAnswer, callback) {
-      updateScreen(`
-        <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%; background: #cce0dd; padding: 20px;">
-          <h1 style="color: #4b2e83; margin-top: 30px;">How did the music sound?</h1>
-          <div style="display: flex; gap: 40px; margin-top: 20px;">
-            <button class="tempo-btn" data-choice="fast" style="padding: 14px 28px; font-size: 1.2em; border-radius: 10px;">Fast</button>
-            <button class="tempo-btn" data-choice="slow" style="padding: 14px 28px; font-size: 1.2em; border-radius: 10px;">Slow</button>
-            <button class="tempo-btn" data-choice="same" style="padding: 14px 28px; font-size: 1.2em; border-radius: 10px;">Same</button>
-          </div>
-          <audio id="correctSound" src="correct_feedback.mp3"></audio>
-          <audio id="wrongSound" src="wrong_feedback.mp3"></audio>
-          <div id="feedback" style="margin-top: 20px; font-size: 1.2em; color: red;"></div>
-        </div>
-      `, "#cce0dd");
+  wrapper.appendChild(video);
+  container.appendChild(wrapper);
 
-      const buttons = document.querySelectorAll('.tempo-btn');
-      buttons.forEach(btn => {
-        btn.addEventListener('click', () => {
-          const choice = btn.getAttribute('data-choice');
-          if (choice === correctAnswer) {
-            document.getElementById("feedback").style.color = "green";
-            document.getElementById("feedback").innerHTML = "Correct!";
-            document.getElementById("correctSound").play().then(() => {
-              setTimeout(callback, 1500);
-            });
-          } else {
-            document.getElementById("feedback").style.color = "red";
-            document.getElementById("feedback").innerHTML = "Oops! Try again.";
-            document.getElementById("wrongSound").play();
-          }
-        });
-      });
-    }
+  video.onended = () => {
+    showTempoResponseScreen(correctAnswer, callback);
+  };
+}
+
+function showTempoResponseScreen(correctAnswer, callback) {
+  const container = document.getElementById("visual-container");
+
+  // overlay the response UI on top
+  const overlay = document.createElement("div");
+  overlay.style.cssText = `
+    position: absolute;
+    inset: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: rgba(255,255,255,0.8);
+  `;
+  overlay.innerHTML = `
+    <h1 style="color:#4b2e83;">How did the music sound?</h1>
+    <div style="display:flex; gap:40px; margin-top:20px;">
+      <button data-choice="fast" class="tempo-btn" style="padding:14px 28px; font-size:1.2em;">Fast</button>
+      <button data-choice="slow" class="tempo-btn" style="padding:14px 28px; font-size:1.2em;">Slow</button>
+      <button data-choice="same" class="tempo-btn" style="padding:14px 28px; font-size:1.2em;">Same</button>
+    </div>
+    <div id="feedback" style="margin-top:20px; font-size:1.2em;"></div>
+    <audio id="correctSound" src="correct_feedback.mp3"></audio>
+    <audio id="wrongSound" src="wrong_feedback.mp3"></audio>
+  `;
+
+  container.appendChild(overlay);
+  const feedbackEl = overlay.querySelector("#feedback");
+  const playCorrect = () => overlay.querySelector("#correctSound").play();
+  const playWrong   = () => overlay.querySelector("#wrongSound").play();
+
+  overlay.querySelectorAll(".tempo-btn").forEach(btn => {
+    btn.addEventListener("click", () => {
+      const choice = btn.getAttribute("data-choice");
+      if (choice === correctAnswer) {
+        feedbackEl.style.color = "green";
+        feedbackEl.textContent = "Correct!";
+        playCorrect();
+        setTimeout(() => {
+          overlay.remove();
+          callback();
+        }, 1500);
+      } else {
+        feedbackEl.style.color = "red";
+        feedbackEl.textContent = "Oops! Try again.";
+        playWrong();
+      }
+    }, { once: false });
+  });
+}
+
 
     function showRealTrialsIntro() {
       setTimeout(() => {
