--- a/index.html
+++ b/index.html
@@ -394,11 +394,11 @@ function playFastVideo() {
       nextPractice();
     }
 
+// 1) playTempoPracticeVideo: unmute, contain, then hand off to response screen
 function playTempoPracticeVideo(videoFile, correctAnswer, callback) {
   const container = document.getElementById("visual-container");
   container.innerHTML = "";
 
-  // wrapper to center & contain
   const wrapper = document.createElement("div");
   wrapper.style.cssText = `
     display: flex;
@@ -406,13 +406,14 @@ function playTempoPracticeVideo(videoFile, correctAnswer, callback) {
     justify-content: center;
     width: 100%; height: 100%;
     background: #cce0dd;
+    position: relative;
   `;
 
   const video = document.createElement("video");
   video.src = videoFile;
   video.autoplay = true;
   video.playsInline = true;
-  video.muted = true; 
+  video.muted = false;            // ← unmute so you hear the clip
   video.style.cssText = `
     max-width: 100%;
     max-height: 100%;
@@ -427,10 +428,9 @@ function playTempoPracticeVideo(videoFile, correctAnswer, callback) {
   };
 }
 
+// 2) showTempoResponseScreen: solid white background, same Fast/Slow/Same buttons
 function showTempoResponseScreen(correctAnswer, callback) {
-  const container = document.getElementById("visual-container");
-
-  // overlay the response UI on top
+  const wrapper = document.querySelector("#visual-container > div");
   const overlay = document.createElement("div");
   overlay.style.cssText = `
     position: absolute;
@@ -439,60 +439,80 @@ function showTempoResponseScreen(correctAnswer, callback) {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: rgba(255,255,255,0.8);
+    background: white;            /* ← solid white */
   `;
   overlay.innerHTML = `
     <h1 style="color:#4b2e83;">How did the music sound?</h1>
     <div style="display:flex; gap:40px; margin-top:20px;">
-      <button data-choice="fast" class="tempo-btn" style="padding:14px 28px; font-size:1.2em;">Fast</button>
-      <button data-choice="slow" class="tempo-btn" style="padding:14px 28px; font-size:1.2em;">Slow</button>
-      <button data-choice="same" class="tempo-btn" style="padding:14px 28px; font-size:1.2em;">Same</button>
+      <button data-choice="fast" class="tempo-btn">Fast</button>
+      <button data-choice="slow" class="tempo-btn">Slow</button>
+      <button data-choice="same" class="tempo-btn">Same</button>
     </div>
     <div id="feedback" style="margin-top:20px; font-size:1.2em;"></div>
     <audio id="correctSound" src="correct_feedback.mp3"></audio>
-    <audio id="wrongSound" src="wrong_feedback.mp3"></audio>
+    <audio id="wrongSound"   src="wrong_feedback.mp3"></audio>
   `;
+  wrapper.appendChild(overlay);
 
-  container.appendChild(overlay);
-  const feedbackEl = overlay.querySelector("#feedback");
-  const playCorrect = () => overlay.querySelector("#correctSound").play();
-  const playWrong   = () => overlay.querySelector("#wrongSound").play();
-
+  const fb = overlay.querySelector("#feedback");
   overlay.querySelectorAll(".tempo-btn").forEach(btn => {
     btn.addEventListener("click", () => {
       const choice = btn.getAttribute("data-choice");
       if (choice === correctAnswer) {
-        feedbackEl.style.color = "green";
-        feedbackEl.textContent = "Correct!";
-        playCorrect();
+        fb.style.color = "green";
+        fb.textContent = "Correct!";
+        overlay.querySelector("#correctSound").play();
         setTimeout(() => {
           overlay.remove();
           callback();
         }, 1500);
       } else {
-        feedbackEl.style.color = "red";
-        feedbackEl.textContent = "Oops! Try again.";
-        playWrong();
+        fb.style.color = "red";
+        fb.textContent = "Oops! Try again.";
+        overlay.querySelector("#wrongSound").play();
       }
-    }, { once: false });
+    });
   });
 }
 
+// 3) runTempoPractice: two trials, then show real‐trial instructions
+function runTempoPractice() {
+  const practice = [
+    { video: "PT_FAST2.mp4", correct: "fast" },
+    { video: "PT_SLOW2.mp4", correct: "slow" }
+  ];
+  let idx = 0;
 
-    function showRealTrialsIntro() {
-      setTimeout(() => {
-        updateScreen(`
-          <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100%; background: #cce0dd;">
-            <h1 style="margin-top: 30px; color: #4b2e83;">Awesome! Now you're ready for the real trials!</h1>
-            <button id="startRealTrials" class="btn-primary" style="margin-top: 20px; font-size: 1.2em;">Start</button>
-          </div>
-        `, "#cce0dd");
-
-        document.getElementById("startRealTrials").addEventListener("click", () => {
-          startRealTrials();
-        });
-      }, 1500);
+  function next() {
+    if (idx >= practice.length) {
+      showRealTrialsIntro();
+    } else {
+      const { video, correct } = practice[idx++];
+      playTempoPracticeVideo(video, correct, next);
     }
+  }
+  next();
+}
+
+// 4) showRealTrialsIntro: white instruction screen, then kick off real trials
+function showRealTrialsIntro() {
+  updateScreen(`
+    <div style="padding:40px; text-align:center;">
+      <h1>Awesome—you’re ready for the real tempo trials!</h1>
+      <p style="font-size:1.3em; margin-top:20px;">
+        Next, you’ll hear a series of clips. After each one, choose which elevator Melody rode.
+      </p>
+    </div>
+  `, "white");
+
+  setTimeout(() => {
+    // clear and start your actual tempo block
+    rebuildBaseHTML();
+    // assuming your real‐trial entrypoint is updatePlayButton/startRealTrials:
+    updatePlayButton();
+  }, 3000);
+}
+
 
     /* --------------------------------------------------
        REAL TRIALS  (unchanged logic, but no more document.body manipulation)
